# bettertest

./: .gitignore  Cargo.toml  README.md  boss-api.yaml  build-and-run.sh  build-frontend.sh  build.sh  format.sh  pyproject.toml  regen-api-specs.sh  rustfmt.toml  worker-api.yaml
agents/: AGENTS.md  enrollment.md  problem.md  service.md
bettertest/: __init__.py
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  debug.html  index.html  style.css
frontend/src/: app.rs  frontend_tests.rs  main.rs
server/: Cargo.toml
server/scripts/: parse_pipedef.py  run_task.py
server/src/: boss.rs  main.rs  worker.rs
